--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-navbar />
-
 <div class="flex justify-center bg-[#141414] min-h-screen">
-  <h1 class="text-2xl font-bold">Welcome to {{nameSite}}</h1>
+
+  <app-movies />
+
 </div>
 
