--- a/src/app/navabar/navbar.component.html
+++ b/src/app/navabar/navbar.component.html
@@ -1,5 +1,4 @@
-
-<div class="h-16 w-full sticky top-0 bg-[#141414] text-white drop-shadow-lg flex items-center p-3">
+<div class="h-16 w-full sticky z-10 top-0 bg-[#141414] text-white drop-shadow-lg flex items-center p-3 ">
     <div class="flex flex-row items-center space-x-10">
         <div class="ml-10"><img src="../../assets/images/Logonetflix.png" class="h-9 p-1" alt="Netflix logo"></div>
     
