--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,4 +1,10 @@
+<div>
+    <img src="https://image.tmdb.org/t/p/original/{{bannerMovie.poster_path}}" alt="poster foto van {{bannerMovie.original_title}}" class="h-auto w-full rounded-md cursor-pointer">
+</div>
+
 <div class="p-10 space-y-20">
+
+
     <div>
         <h1 class="text-3xl font-bold mb-5 text-left">Trending</h1>
         <div class="flex flex-row space-x-5 overflow-x-auto w-full">
@@ -29,4 +35,3 @@
         </div>
     </div>
 </div>
-
