--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-navbar />
-<div class="flex justify-center bg-[#141414] text-white min-h-screen">
+<div class="bg-[#141414] text-white min-h-screen">
+  <app-navbar />
 
   <app-movies />
 
