Routing basics works

--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-row justify-center space-x-5 mt-10">
-    <img src="https://image.tmdb.org/t/p/original/{{bannerMovie.poster_path}}" [routerLink]="['/movie',bannerMovie.id]" alt="poster foto van {{bannerMovie.original_title}}" class="h-auto w-96 cursor-pointer rounded-lg">
+    <img src="https://image.tmdb.org/t/p/original/{{bannerMovie.poster_path}}" alt="poster foto van {{bannerMovie.original_title}}" class="h-auto w-96 cursor-pointer rounded-lg">
 
     <div class="flex flex-col w-56 space-y-2">
         <h1 class="font-bold text-2xl text-left">{{bannerMovie.original_title}}</h1>
