--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<div class="bg-[#141414] text-white min-h-screen">
-  <app-navbar />
-
-  <app-movies />
-
-</div>
+<router-outlet></router-outlet>
 
