--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,1 +1,17 @@
-<p>details works!</p>
+<div class="bg-[#141414] text-white min-h-screen">
+    <div class="h-16 w-full sticky z-10 top-0 bg-[#141414] text-white drop-shadow-lg flex items-center p-3 ">
+        <div class="">
+            <div class="ml-10"><img src="../../assets/images/Logonetflix.png" class="h-9 p-1" alt="Netflix logo"></div>
+        </div>
+
+        <div class="flex-grow flex justify-center items-center">
+            <h1 class="font-bold text-xl">{{ movieDetails.original_title }}</h1>
+        </div>
+
+        <div class="flex items-center space-x-2">
+            <magnifying-glass-outline-icon></magnifying-glass-outline-icon>
+            <bell-outline-icon></bell-outline-icon>
+            <div class="h-5 w-5 bg-gray-500 rounded-sm animate-pulse">
+        </div>
+    </div>
+</div>
