--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,17 +1,24 @@
 <div class="bg-[#141414] text-white min-h-screen">
-    <div class="h-16 w-full sticky z-10 top-0 bg-[#141414] text-white drop-shadow-lg flex items-center p-3 ">
-        <div class="">
-            <div class="ml-10"><img src="../../assets/images/Logonetflix.png" class="h-9 p-1" alt="Netflix logo"></div>
-        </div>
-
-        <div class="flex-grow flex justify-center items-center">
-            <h1 class="font-bold text-xl">{{ movieDetails.original_title }}</h1>
-        </div>
-
-        <div class="flex items-center space-x-2">
-            <magnifying-glass-outline-icon></magnifying-glass-outline-icon>
-            <bell-outline-icon></bell-outline-icon>
-            <div class="h-5 w-5 bg-gray-500 rounded-sm animate-pulse">
+    <div>
+        <div class="h-16 w-full sticky z-10 top-0 bg-[#141414] text-white drop-shadow-lg flex items-center p-3">
+            <div class="">
+                <div class="ml-10"><img src="../../assets/images/Logonetflix.png" class="h-9 p-1" alt="Netflix logo"></div>
+            </div>
+        
+            <div class="flex-grow flex justify-center items-center">
+                <h1 class="font-bold text-xl">{{ movieDetails.original_title }}</h1>
+            </div>
+        
+            <div class="flex items-center space-x-2">
+                <magnifying-glass-outline-icon></magnifying-glass-outline-icon>
+                <bell-outline-icon></bell-outline-icon>
+                <div class="h-5 w-5 bg-gray-500 rounded-sm animate-pulse">
+            </div>
         </div>
     </div>
+</div>
+
+<div class="flex justify-center fixed">
+    <!-- <img src="https://image.tmdb.org/t/p/original/{{movieDetails.poster_path}}" class="h-81 w-60 drop-shadow-2xl" alt="Poster van de film"> -->
+    <img src="https://image.tmdb.org/t/p/original/{{movieDetails.backdrop_path}}" class="drop-shadow-2xl relative" alt="Poster van de film">
 </div>
