--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -2,7 +2,10 @@
     <div>
         <div class="h-16 w-full sticky z-10 top-0 bg-[#141414] text-white drop-shadow-lg flex items-center p-3">
             <div class="">
-                <div class="ml-10"><img src="../../assets/images/Logonetflix.png" class="h-9 p-1" alt="Netflix logo"></div>
+                <a [routerLink]="['/']">
+                    <div class="ml-10"><img src="../../assets/images/Logonetflix.png" class="h-9 p-1" alt="Netflix logo"></div>
+                </a>
+                
             </div>
         
             <div class="flex-grow flex justify-center items-center">
@@ -10,15 +13,52 @@
             </div>
         
             <div class="flex items-center space-x-2">
-                <magnifying-glass-outline-icon></magnifying-glass-outline-icon>
-                <bell-outline-icon></bell-outline-icon>
-                <div class="h-5 w-5 bg-gray-500 rounded-sm animate-pulse">
+                <magnifying-glass-solid-icon></magnifying-glass-solid-icon>
+                <bell-solid-icon></bell-solid-icon>
+                <div class="h-5 w-5 bg-gray-500 rounded-sm animate-pulse">                                    
             </div>
         </div>
     </div>
 </div>
 
-<div class="flex justify-center fixed">
-    <!-- <img src="https://image.tmdb.org/t/p/original/{{movieDetails.poster_path}}" class="h-81 w-60 drop-shadow-2xl" alt="Poster van de film"> -->
-    <img src="https://image.tmdb.org/t/p/original/{{movieDetails.backdrop_path}}" class="drop-shadow-2xl relative" alt="Poster van de film">
+<div class="flex justify-center fixed min-h-min">
+    <div class="relative">
+        <img src="https://image.tmdb.org/t/p/original/{{movieDetails.backdrop_path}}" class="drop-shadow-2xl relative" alt="Poster van de film">
+    </div>
+    <div class="flex justify-between absolute px-96 py-20 backdrop-brightness-50 bg-black/30 w-full h-full">
+        <div class="space-y-3">
+            <a [routerLink]="['/']">
+                <arrow-left-solid-icon></arrow-left-solid-icon>
+            </a>            
+            <h1 class="text-3xl font-bold">{{ movieDetails.original_title }}</h1>
+            <p class="text-xl font-bold ">{{ movieDetails.tagline }}</p>
+            <p class="text-xl w-[35vw]">{{ movieDetails.overview }}</p>
+
+            <div class="text-lg">
+                <div class="flex flex-row space-x-1">
+                    <p class="font-bold">Duur:</p>
+                    <p>{{ movieDetails.runtime }} minuten</p>
+                </div>
+
+                <div class="flex flex-row space-x-1">
+                    <p class="font-bold">Orginele taal:</p>
+                    <p>{{ movieDetails.original_language }}</p>
+                </div>
+
+                <div class="flex flex-row space-x-1">
+                    <p class="font-bold">Genres:</p>
+                    <p *ngFor="let genres of movieDetails.genres">{{ genres.name }}, </p>
+                </div>
+
+                <div class="flex flex-row space-x-1">
+                    <p class="font-bold">Uitgekomen op:</p>
+                    <p>{{ movieDetails.release_date }}</p>
+                </div>
+
+            </div>
+        </div>
+
+        <img src="https://image.tmdb.org/t/p/original/{{movieDetails.poster_path}}" class=" h-96 w-64 drop-shadow-2xl" alt="Poster van de film">
+
+    </div>
 </div>
